# global-franchises

./: .cursorrules  .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  apply_migration.py  batch_cli.py  changelog.md  inspect_genai.py  inspect_genai_types.py  inspect_list.py  nixpacks.toml  pyproject.toml  railway.json  reproduce_error.py  reproduce_error_v2.py  start.sh  test_backend.py  test_extractor_fix.py  test_scraper_territory_checks.py
.cursor/rules/: development.mdc
config/franserve/: data_prompt.txt  keywords_prompt.txt  keywords_structured_output.json  markdown_prompt.txt  structured_output.json
docs/: DEPLOYMENT.md  TERRITORY_AVAILABILITY_LOGIC.md  TODO.md
docs/database/: BATCH_SYSTEM.md  README.md  SCHEMA.md  add_comparison_columns_to_leads.sql  add_contacts_email_constraint.sql  add_county_to_territory_checks.sql  add_enhanced_franchise_fields.sql  add_family_of_brands_tables.sql  add_geo_columns_to_territory_checks.sql  add_ghl_messages_processing_columns.sql  add_ghl_sync_columns_to_leads.sql  add_llm_parsing_fields.sql  add_llm_processed_at.sql  add_markdown_conversion_fields.sql  add_matches_column_to_leads.sql  add_territory_normalization_fields.sql  create_get_franchises_by_state.sql  create_ghl_tables.sql  create_leads_table.sql  create_match_franchises.sql  database_flow.mmd  (+7 more)
frontend/: next.config.ts  package-lock.json  package.json  vercel.json
notebooks/: 1.1-data-franserve.ipynb  1.2-data-nlp.ipynb  2.1-ghl-conversations.ipynb  test.html
scripts/: download_city_geojson.py  download_county_geojson.py  download_zip_geojson.py
src/: config.py  dataset.py  search_franchises.py
test_scrape_output/: franchisedetails.asp.html.fragment.html  franchisedetails.asp.html.full_page.html
tests/: fix.py  test_html_formatter.py  test_main.py  test_scrapper.py  test_storage_client.py  test_supabase.py
(+194 files in other folders)
