[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "franchisesglobal"
version = "0.0.1"
description = "A short description of the project."
authors = ["Panda"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "~3.12"
supabase = "^2.17.0"
openai = "^1.97.0"
pandas = "^2.3.1"
bokeh = "^3.7.3"
tqdm = "^4.67.1"
dotenv = "^0.9.9"
loguru = "^0.7.3"
beautifulsoup4 = "^4.13.4"
requests = "^2.32.4"
lxml = "^6.0.0"
pytest = "^8.4.1"
google-genai = "^1.26.0"
typer = "^0.16.0"
fastapi = "^0.121.2"
uvicorn = "^0.38.0"
pgeocode = "^0.5.0"

[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true
